--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,39 +1,45 @@
 @import "compass/css3";
 
 .widget {
-  padding:0;
-  padding:0;
-  list-style: none;
-
   display: flex;
-  flex-flow: row wrap;
-  justify-content: space-around;
-  align-items: flex-start;
+  -webkit-flex-flow: row wrap;
+  padding:15px;
+  
+  justify-content:space-around;
+  align-items: stretch;
+  align-content:stretch;
 }
 
 
-.cs_lab {
-  background: tomato;
-  padding: 5px;
-  width: 200px;
-  height: 150px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+.cs_lab { 
+  background:tomato;
+  height:225px;
+  width:200px;
+  padding:20px;
   
-  line-height: 150px;
-  color: white;
-  font-weight: bold;
-  font-size: 3em;
-  text-align: center;
+  display:flex;
+  -webkit-flex-flow: row wrap;
+  justify-content:flex-start;
+  align-items:stretch;
+  align-content:space-between;
 }
 
 .lab_title {
-
-
+  width: 180px;
+  height: 30px;
+  text-align:center;
+  color:white;
+  font-size: 1.5em;
 }
 
+
 .lab_machine {
-
-
-
+  margin:5px;
+  background:gray;
+  width:30px;
+  height:30px;
+  
+  text-align:center;
+  color:white;
+  line-height:30px;
 }
